@@ -22,7 +22,7 @@ project(CIAO_TargetManager_stub): ciao_client_dnc, ciao_deployment_stub {
 project(CIAO_TargetManager_svnt) : ciao_servant_dnc {
   after += CIAO_TargetManager_stub
   sharedname  = TargetManager_svnt
-  libs    += TargetManager_stub
+  libs    += TargetManager_stub NodeManager_stub
 
   idlflags  +=  -Wb,export_macro=TARGETMANAGER_SVNT_Export -Wb,export_include=TargetManager_svnt_export.h
   dynamicflags = TARGETMANAGER_SVNT_BUILD_DLL
@@ -47,7 +47,7 @@ project(CIAO_TargetManager_svnt) : ciao_servant_dnc {
 project(CIAO_TargetManager_exec) : ciao_servant_dnc, ciao_config_handlers, ciao_domainapplicationmanager_dnc {
   after   += CIAO_TargetManager_svnt
   sharedname = TargetManager_exec
-  libs      += TargetManager_stub TargetManager_svnt
+  libs      += TargetManager_stub TargetManager_svnt NodeManager_stub
 
   idlflags  +=  -Wb,export_macro=TARGETMANAGER_EXEC_Export -Wb,export_include=TargetManager_exec_export.h
   dynamicflags   = TARGETMANAGER_EXEC_BUILD_DLL
